Closed
Bug 159781
Opened 23 years ago
Closed 23 years ago
After selecting Customize toolbar menu item, Customize Toolbar sheet doesn't display
Categories
(Camino Graveyard :: Toolbars & Menus, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: chrispetersen, Assigned: david.haas)
References
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
5.72 KB,
patch
|
Details | Diff | Splinter Review |
Build: 2002-07-27-05
Platform: OS X 10.1.5
Expected Results:Customize toolbar sheet should appear
What I got: Customize toolbar sheet isn't displayed even though I
Reporter | ||
Comment 1•23 years ago
|
||
Oops, submitted form before finishing information.
What I got: Customize toolbar sheet isn't displayed even though I can drag and
reposition items on toolbar. I can't seem to exit out of this mode.
Steps to reproduce:
1) Launch application
2) Choose View - Customize Toolbar
3) No sheet appears. I can modify the toolbar though.
Reporter | ||
Updated•23 years ago
|
Summary: After selecting Customize toolbar item, Customize Toolbar sheet doesn't display → After selecting Customize toolbar menu item, Customize Toolbar sheet doesn't display
Reporter | ||
Comment 4•23 years ago
|
||
I disagree. After selecting Customize toolbar, you don't get the usual sheet
that normally appears nor can you exit this mode gracefully. Basically, you have
to close this window since none of the toolbar icons (url field, forward/back,
search) function when clicked.
Comment 6•23 years ago
|
||
i get this assert on the console
2002-07-29 18:54:20.879 Navigator[27296] -[CHAutoCompleteTextView
encodeWithCoder:] *** NSCoding is explicitly not supported by the new text
system. Save the rtfd contents and as much of the setup as necessary yourself.
so it looks like the autocomplete undo changes were the culprit. :(
Assignee: sfraser → haasd
Comment 7•23 years ago
|
||
so who should own this?
Assignee | ||
Comment 8•23 years ago
|
||
i am working on it as we speak. but somebody with a clue could probably fix it
before I can. Here's what I think so far:
It has something to do with CHAutoCompleteTextView implementing the NSCoder
protocol methods -initWithCoder & -encodeWithCoder. I think the text contained
in the NSTextStorage can be bundled up into a codable NSData using the
RTFDFromRange:documentAttributes. Probably at least some of the memeber
variables need to get encoded & decoded as well.
I've managed to change the bug behavior from a console assert to a sigbus crash,
so I must be making progress. Help appreciated.
Assignee | ||
Comment 9•23 years ago
|
||
This makes the customize toolbar palette work again. There are (at least) 2
cosmetic bugs with this fix, but I wanted to get the big thing fixed first.
First, there's a white box in the bottom left corner of the "default set". It
is, suspiciously enough, the exact size of the white box in the locaton URL
field. Second, there's no text in the location field of the customize palette.
I think someone could fix both things by playing around in the initWithCoder
method.
Comment 10•23 years ago
|
||
FYI, in build 0728, when this bug has been activated, if you click in the
location bar, including the small icon on the left, the location bar's end is
enlarged by 1cm and the SideBar buttons move to the right. On MouseUp they take
back their place.
If this bug is not activated in new window, they are not affected.
Comment 11•23 years ago
|
||
Maybe we should back out the 'undo in url bar' patch until we can fix these
issues. Messing with field editors seems fraught with problems.
Assignee | ||
Comment 12•23 years ago
|
||
It makes everything work again. And it even fixes the 2 location bars per
toolbar problem. And it works around a Cocoa bug, which I wouldn't mind if
someone else could replicate or just see if it's been fixed in 10.2.
Attachment #93256 -
Attachment is obsolete: true
Comment 13•23 years ago
|
||
*** Bug 160890 has been marked as a duplicate of this bug. ***
Comment 14•23 years ago
|
||
Patch works great over here.
Comment 15•23 years ago
|
||
landed, with some serious comments on all the hackery ;) yay!!!
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•