Fix customize dialog with location bar NSTextView. Adds support for NSCoder to support it and fixes some odd bugs we think might be in the OS. (bug 159781)